add peptides task